src/objects/DebugInfo__c.object
<CustomObject>
    <fields>
        <fullName>DebugData__c</fullName>
        <description>Debug Data</description>
        <label>Debug Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DebugErrorCode__c</fullName>
        <label>Debug Error Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DebugMessage__c</fullName>
        <label>Debug Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Debug Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{00000000}</displayFormat>
        <label>Debug Info Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>